# SimpleNetwork

./: CMakeLists.txt  README.md
common/: mat.cpp  mat.h
samples/mnist/: main.cpp
samples/test/: main.cpp
src/: Network.cpp  Network.h
